--- a/class06/homework/startup-matchmaker/css/styles.css
+++ b/class06/homework/startup-matchmaker/css/styles.css
@@ -3,11 +3,51 @@
 // font-family: 'Merriweather', serif;
 // font-family: 'Source Sans Pro', sans-serif;
 
-#container {
+.container {
 	margin: 0 auto;
 }
 
-.title {
+h1 {
 	background-color: black;
 	color: yellow;
+	font-family: 'Merriweather', serif;
+	text-align: left;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+	border-bottom: 5px solid yellow;
+}
+
+nav {
+	background-color: black;
+	font-family: sans-serif;
+	text-align: right;
+	color: white;
+	padding: 5px;
+}
+
+nav a{
+	padding: 10px;
+	color: white;
+	font-family: 'Merriweather', serif;
+	font-size: 12px;
+	text-decoration: none;
+}
+
+.brains {
+	background-color: gray;
+	padding: 15px;
+	color: black;
+	text-align: center;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-style: italic;
+	font-size: 20px;
+}
+
+img {
+	width: 100%;
+	height: auto;
+}
+h2 {
+	display: inline-block;
 }
