--- a/Final Project/css/styles.css
+++ b/Final Project/css/styles.css
@@ -11,11 +11,14 @@
 	background-image: inherit;
 }
 
+#mobilelogo{
+	display: none;
+}
+
 header {
 	background-color: #516591;
 	overflow: hidden;
 	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
-
 }
 
 header nav {
@@ -29,6 +32,7 @@ header nav a {
 	text-decoration: none;
 	font-size: 20px;
 	margin-left: 50px;
+	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
 }
 
 a:hover {
@@ -44,12 +48,8 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
 }
 
-#mobilelogo{
-	display: none;
-}
-
 @media screen and (max-width: 500px) {
-	
+
 	header nav{
 		float: left;
 	}
@@ -58,13 +58,15 @@ body {
 		display: block;
 	}
 
-	#desktoplogo{
-		display: none;
-	}
-
 	#mobilelogo{
 		width: 99%;
 		height: auto;
 		background-image: inherit;
 	}
+	
+	#desktoplogo{
+		display: none;
+	}
+
+	
 }
