--- a/Final Project/css/styles.css
+++ b/Final Project/css/styles.css
@@ -30,27 +30,38 @@ header nav a {
 	display: inline-block;
 	color: white;
 	text-decoration: none;
-	font-size: 20px;
-	margin-left: 50px;
+	font-size: 16px;
+	margin-left: 25px;
 	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
 }
 
 a:hover {
-	color: sepia;
 	font-size: 1.5em;
 	font-weight: bold;
 }	
 
+li:hover {
+	font-size: 1.25em;
+	font-weight: bold;
+	color: #98BAF9;
+	text-transform: uppercase;
+	padding: 1%;
+}	
 
 body {
 	background: #fff;
-	color: #ff0000;
+	color: black;
 	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
+}
+
+.bloglist{
+	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
+	margin: 0 0 2% 2%;
 }
 
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
 
 	header nav{
 		float: none;
@@ -61,6 +72,12 @@ body {
 		display: block;
 		text-align: center;
 	}
+
+	a:hover {
+	font-size: 1.5em;
+	font-weight: bold;
+	padding: 2%;
+	}	
 
 	#mobilelogo{
 		display: block;
