--- a/Final Project/css/styles.css
+++ b/Final Project/css/styles.css
@@ -38,6 +38,8 @@ header nav a {
 a:hover {
 	font-size: 1.5em;
 	font-weight: bold;
+	transition: all 0.5s;
+	color: gold;
 }	
 
 li:hover {
@@ -46,6 +48,7 @@ li:hover {
 	color: #98BAF9;
 	text-transform: uppercase;
 	padding: 1%;
+	transition: all 0.5s;
 }	
 
 body {
@@ -62,6 +65,7 @@ body {
 
 p.blog{
 margin-left: 4%;
+margin-right: 4%;
 }
 
 
