--- a/Final Project/css/styles.css
+++ b/Final Project/css/styles.css
@@ -67,7 +67,15 @@ margin-left: 4%;
 margin-right: 4%;
 }
 
+input{
+	display: block;
+	margin: 2%;
+}
 
+select{
+	display: block;
+	margin: 2%;
+}
 
 @media screen and (max-width: 700px) {
 
