--- a/Final Project/css/styles.css
+++ b/Final Project/css/styles.css
@@ -62,17 +62,17 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
 }
 
-span{
-	font-size: 1.25em;
-	color: #98BAF9;
-}
-
 /* HOMEPAGE */
 
-iframe{
+.desktopvideo{
 	display: block;
 	align: center;
 	text-align: center;
+	margin: 2%;
+}
+
+.mobilevideo{
+	display: none;
 }
 
 #homepagecontainer{
@@ -105,10 +105,15 @@ font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
 
 /* Find a Board Page */
 
+span{
+	font-size: 1.5em;
+	color: #98BAF9;
+	font-weight: bold;
+}
+
 input{
 	display: block;
-	margin: 2%;
-	width: 30%;
+	margin: 2%	width: 30%;
 }
 
 input[type=text]:focus {
@@ -146,9 +151,8 @@ select{
 
 .intro{
 	margin: 2%;
+	padding: 2%;
 	font-size: 100%;
-	font-style: italic;
-
 }
 
 @media screen and (max-width: 700px) {
@@ -175,7 +179,7 @@ select{
 		background-image: inherit;
 	}
 
-	#mobilevideo{
+	.mobilevideo{
 		display: block;
 		width: 300px;
 		height: auto;
@@ -185,7 +189,7 @@ select{
 		display: none;
 	}	
 
-	#desktopvideo{
+	.desktopvideo{
 		display: none;
 	}
 }
