--- a/Final Project/css/styles.css
+++ b/Final Project/css/styles.css
@@ -56,9 +56,27 @@ li:hover {
 }
 
 body {
-	background: #fff;
+	background: white;
 	color: black;
-	background-color: lightgrey;
+	background-color: white;
+	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
+
+}
+
+.mantra{
+	height: 10%;
+	background-color: lightgray;
+	padding: 3%;
+	text-align: center;
+	font-style: italic;
+	font-size: 1.4em;
+	font-weight: bold;
+	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
+}
+
+h4{
+	font-style: italic;
+	font-size: .75em;
 	font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
 }
 
@@ -67,7 +85,6 @@ body {
 .desktopvideo{
 	display: block;
 	align: center;
-	text-align: center;
 	margin: 2%;
 }
 
@@ -76,7 +93,7 @@ body {
 }
 
 #homepagecontainer{
-	background-color: lightgrey;
+	background-color: white;
 	overflow: hidden;
 	padding-left: 4%;
 	padding-right: 4%;
@@ -106,14 +123,15 @@ font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif;
 /* Find a Board Page */
 
 span{
-	font-size: 1.5em;
+	font-size: 2em;
 	color: #98BAF9;
 	font-weight: bold;
 }
 
 input{
 	display: block;
-	margin: 2%	width: 30%;
+	margin: 2%;	
+	width: 50%;
 }
 
 input[type=text]:focus {
@@ -130,7 +148,7 @@ input[type=text] {
 select{
 	display: block;
 	margin: 2%;
-	width: 30%;
+	width: 50%;
 }
 
 #findaboardbutton{
@@ -141,18 +159,13 @@ select{
 	padding: 2%;
 	background-color: #98BAF9;
   	border: 1px solid #666;
-  	color:#000;
+  	color: white;
   	border-radius: 10%;
 }
 
-.quotebox{
-	height: 20%;
-}
-
-.intro{
-	margin: 2%;
-	padding: 2%;
-	font-size: 100%;
+#surveycontainer{
+	background-color: #516591;
+	padding: 5%;
 }
 
 @media screen and (max-width: 700px) {
@@ -191,5 +204,13 @@ select{
 
 	.desktopvideo{
 		display: none;
+	}
+
+	input{
+		width: 70%;
+	}	
+
+	select{
+		width: 70%;
 	}
 }
