--- a/class06/homework/startup-matchmaker/css/main.css
+++ b/class06/homework/startup-matchmaker/css/main.css
@@ -11,23 +11,20 @@ body {
 }
 
 h1 {
-	font-size: 2em;
+	font-size: 12px;
 	line-height: 1;
 }
-
 h2 {
-	font-size: 1.5em;
+	font-size: 12px;
 	font-weight: bold;
 }
-
 h3 {
 	font-family: 'Merriweather', serif;
-	font-size: 1.25em;
+	font-size: 12px;
 	font-weight: bold;
 }
-
 p {
-	margin: 0 0 1.5em 0;
+	margin: 0 0 12px 0;
 }
 
 .button {
@@ -52,12 +49,10 @@ p {
 	border-bottom: 4px solid yellow;
 	padding: 0 3%;
 }
-
 #page-header a {
 	color: inherit;
 	text-decoration: none;
 }
-
 #page-header h1 {
 	float: left;
 	color: yellow;
@@ -65,32 +60,29 @@ p {
 	font-size: 1.5em;
 	margin: 20px 0 0 0;
 }
-
 #page-header nav {
 	float: right;
 }
-
 #page-header nav li {
 	float: left;
 }
-
 #page-header nav a {
 	display: block;
 	padding: 20px 15px;
 }
-
 #page-header nav li a:hover {
 	color: yellow;
 }
-
 #page-header nav li.active a {
 	background: #666;
 }
-
 #page-header nav strong {
 	font-family: 'Oswald', sans-serif;
 	text-transform: uppercase;
 }
+#page-header nav strong a {
+}
+
 
 .tagline {
 	font-family: 'Merriweather', serif;
@@ -103,11 +95,9 @@ p {
 	background: #C6C6C6;
 	border-top: 1px solid #AAA;
 }
-
 .tagline del {
 	color: #999;
 }
-
 .tagline ins {
 	text-decoration: none;
 	border-bottom: 3px solid yellow;
@@ -136,20 +126,58 @@ p {
 	overflow: hidden;
 	padding: 2% 0;
 }
-
 .tout {
 	float: left;
 	width: 27.3333%;
 	padding: 2% 3%;
 	box-shadow: inset -1px 0 0 rgba(0,0,0,.15);
 }
-
 .tout:last-child {
 	box-shadow: none;
 }
-
 .tout .button {
 	background: #C6C6C6;
+}
+
+.profiles {
+	background: #C6C6C6;
+	padding: 10px;
+}
+.cards {
+	overflow: hidden;
+}
+.card {
+	float: left;
+	width: 25%;
+}
+.card img {
+	max-width: 100%;
+}
+.card article {
+	background: white;
+	margin: 10px;
+	padding: 10px;
+}
+.card .button {
+	font-size: .75em;
+}
+
+.tags {
+	overflow: hidden;
+	margin-bottom: 10px;
+}
+.tags li {
+	float: left;
+}
+.tags li a {
+	display: block;
+	background: #666;
+	padding: 1px 12px;
+	border-radius: 100px;
+	font-size: .75em;
+	margin: 0 5px 5px 0;
+	color: white;
+	text-decoration: none;
 }
 
 footer {
